Update calendar window to display the appropriate month and year, which changes as the user clicks the previous/next buttons

--- a/src/main/resources/view/CalendarWindow.fxml
+++ b/src/main/resources/view/CalendarWindow.fxml
@@ -10,7 +10,7 @@
 <VBox spacing="20" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <HBox alignment="BASELINE_CENTER" spacing="30">
         <Button text="&lt;&lt;" onMouseClicked="#populateCalendarWithPreviousMonth" />
-        <Text fill="white" text="Calendar" />
+        <Text fx:id="calendarTitle" fill="white" />
         <Button text="&gt;&gt;" onMouseClicked="#populateCalendarWithNextMonth" />
     </HBox>
     <GridPane alignment="BASELINE_CENTER" prefWidth="600">
