--- a/src/main/resources/view/NoteListCard.fxml
+++ b/src/main/resources/view/NoteListCard.fxml
@@ -28,8 +28,8 @@
         <Label fx:id="title" text="\$first" styleClass="cell_big_label" />
       </HBox>
       <FlowPane fx:id="tags" />
-<!--      <Label fx:id="address" styleClass="cell_small_label" text="\$address" />-->
-<!--      <Label fx:id="email" styleClass="cell_small_label" text="\$email" />-->
+      <Label fx:id="description" styleClass="cell_small_label" text="\$description" />
+      <Label fx:id="content" styleClass="cell_small_label" text="\$content" />
     </VBox>
   </GridPane>
 </HBox>
