--- a/src/main/resources/view/EntryListCard.fxml
+++ b/src/main/resources/view/EntryListCard.fxml
@@ -14,26 +14,24 @@
     <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
     </columnConstraints>
-    <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
+    <!--<VBox alignment="CENTER_LEFT" minHeight="105" GridPane.rowIndex="0" GridPane.columnIndex="0">-->
       <padding>
-        <Insets top="5" right="5" bottom="5" left="15" />
+        <Insets top="10" right="15" bottom="10" left="15" />
       </padding>
-      <HBox spacing="5" alignment="CENTER_LEFT">
+      <HBox spacing="5" alignment="CENTER_LEFT" GridPane.rowIndex="0" GridPane.columnIndex="0">
         <Label fx:id="id" styleClass="cell_big_label">
           <minWidth>
             <!-- Ensures that the label text is never truncated -->
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
-        <Label fx:id="desc" text="\$first" styleClass="cell_big_label" />
-      </HBox>
-      <FlowPane fx:id="tags" />
+        <Label fx:id="desc" text="\$desc" styleClass="cell_big_label" />
+        <Label fx:id="amt" styleClass="cell_big_label" text="\$amt" />
 
-      <Label fx:id="time" styleClass="cell_small_label" text="\$phone" />
-      <Label fx:id="amt" styleClass="cell_small_label" text="\$address" />
-      <!--
-<Label fx:id="email" styleClass="cell_small_label" text="\$email" />
--->
-    </VBox>
+      </HBox>
+      <FlowPane GridPane.rowIndex="1" GridPane.columnIndex="0" fx:id="tags" />
+      <Label GridPane.rowIndex="1" GridPane.columnIndex="1" fx:id="time" styleClass="cell_small_label" text="\$time" />
+
+    <!--</VBox>-->
   </GridPane>
 </HBox>
