--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -14,69 +14,70 @@
 <?import javafx.stage.Stage?>
 
 <fx:root minHeight="600" minWidth="450" onCloseRequest="#handleExit" title="Address App" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-  <icons>
-    <Image url="@/images/address_book_32.png" />
-  </icons>
-  <scene>
-    <Scene>
-      <stylesheets>
-        <URL value="@DarkTheme.css" />
-        <URL value="@Extensions.css" />
-      </stylesheets>
+    <icons>
+        <Image url="@/images/address_book_32.png" />
+    </icons>
+    <scene>
+        <Scene>
+            <stylesheets>
+                <URL value="@DarkTheme.css" />
+                <URL value="@Extensions.css" />
+            </stylesheets>
 
-      <VBox>
-        <MenuBar fx:id="menuBar">
-          <Menu mnemonicParsing="false" text="File">
-            <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help" />
-          </Menu>
-        </MenuBar>
-            <HBox VBox.vgrow="ALWAYS">
-               <children>
-                  <StackPane styleClass="stack-pane">
-                     <children>
-                        <VBox styleClass="v-box" StackPane.alignment="CENTER" VBox.vgrow="ALWAYS">
-                           <children>
-                              <VBox layoutX="10.0" layoutY="144.0" VBox.vgrow="ALWAYS" />
-                              <Button fx:id="watchlistButton" mnemonicParsing="false" onAction="#goToWatchlist" text="Watchlist" VBox.vgrow="ALWAYS" />
-                              <VBox VBox.vgrow="ALWAYS" />
-                              <Button fx:id="watchedButton" mnemonicParsing="false" onAction="#goToWatched" prefWidth="108.0" text="Watched" VBox.vgrow="ALWAYS" />
-                              <VBox layoutX="10.0" layoutY="111.0" VBox.vgrow="ALWAYS" />
-                              <Button fx:id="searchButton" mnemonicParsing="false" onAction="#goToSearch" prefWidth="108.0" text="Search" VBox.vgrow="ALWAYS" />
-                              <VBox layoutX="10.0" layoutY="10.0" VBox.vgrow="ALWAYS" />
-                              <Button fx:id="statisticsButton" mnemonicParsing="false" onAction="#goToStatistics" prefWidth="108.0" text="Statistics" VBox.vgrow="ALWAYS" />
-                              <VBox layoutX="10.0" layoutY="44.0" VBox.vgrow="ALWAYS" />
-                           </children>
-                           <StackPane.margin>
-                              <Insets />
-                           </StackPane.margin>
+            <VBox>
+                <MenuBar fx:id="menuBar">
+                    <Menu mnemonicParsing="false" text="File">
+                        <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
+                    </Menu>
+                    <Menu mnemonicParsing="false" text="Help">
+                        <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help" />
+                    </Menu>
+                </MenuBar>
+                <HBox VBox.vgrow="ALWAYS">
+                    <children>
+                        <StackPane styleClass="stack-pane">
+                            <children>
+                                <VBox styleClass="v-box" StackPane.alignment="CENTER" VBox.vgrow="ALWAYS">
+                                    <children>
+                                        <VBox layoutX="10.0" layoutY="144.0" VBox.vgrow="ALWAYS" />
+                                        <Button fx:id="watchlistButton" mnemonicParsing="false" onAction="#goToWatchlist" text="Watchlist" VBox.vgrow="ALWAYS" />
+                                        <VBox VBox.vgrow="ALWAYS" />
+                                        <Button fx:id="watchedButton" mnemonicParsing="false" onAction="#goToWatched" prefWidth="108.0" text="Watched" VBox.vgrow="ALWAYS" />
+                                        <VBox layoutX="10.0" layoutY="111.0" VBox.vgrow="ALWAYS" />
+                                        <Button fx:id="searchButton" mnemonicParsing="false" onAction="#goToSearch" prefWidth="108.0" text="Search" VBox.vgrow="ALWAYS" />
+                                        <VBox layoutX="10.0" layoutY="10.0" VBox.vgrow="ALWAYS" />
+                                        <Button fx:id="statisticsButton" mnemonicParsing="false" onAction="#goToStatistics" prefWidth="108.0" text="Statistics" VBox.vgrow="ALWAYS" />
+                                        <VBox layoutX="10.0" layoutY="44.0" VBox.vgrow="ALWAYS" />
+                                    </children>
+                                    <StackPane.margin>
+                                        <Insets />
+                                    </StackPane.margin>
+                                </VBox>
+                            </children>
+                            <stylesheets>
+                                <URL value="@DarkTheme.css" />
+                                <URL value="@Extensions.css" />
+                            </stylesheets>
+                        </StackPane>
+                        <VBox HBox.hgrow="ALWAYS">
+                            <children>
+                                <VBox fx:id="showList" minWidth="340" styleClass="pane-with-border" VBox.vgrow="ALWAYS">
+                                    <StackPane fx:id="contentPanelPlaceholder" VBox.vgrow="ALWAYS" />
+                                    <padding>
+                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    </padding>
+                                </VBox>
+                                <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border">
+                                    <padding>
+                                        <Insets bottom="5" left="10" right="10" top="5" />
+                                    </padding>
+                                </StackPane>
+                                <StackPane fx:id="resultDisplayPlaceHolder" prefHeight="30.0" styleClass="stack-pane" />
+                            </children>
                         </VBox>
-                     </children>
-                     <stylesheets>
-                        <URL value="@DarkTheme.css" />
-                        <URL value="@Extensions.css" />
-                     </stylesheets>
-                  </StackPane>
-                  <VBox HBox.hgrow="ALWAYS">
-                      <children>
-                    <VBox fx:id="showList" minWidth="340" styleClass="pane-with-border" VBox.vgrow="ALWAYS">
-                      <StackPane fx:id="contentPanelPlaceholder" VBox.vgrow="ALWAYS" />
-                           <padding>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                           </padding>
-                    </VBox>
-                    <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border">
-                      <padding>
-                        <Insets bottom="5" left="10" right="10" top="5" />
-                      </padding>
-                    </StackPane>
-                     </children>
-                  </VBox>
-               </children>
-            </HBox>
-      </VBox>
-    </Scene>
-  </scene>
+                    </children>
+                </HBox>
+            </VBox>
+        </Scene>
+    </scene>
 </fx:root>
