--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -11,6 +11,11 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
 <fx:root type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
          title="guiltTrip() - your personal finance tracker" minWidth="450" minHeight="600" onCloseRequest="#handleExit">
   <icons>
@@ -20,8 +25,10 @@
     <Scene>
       <stylesheets>
         <URL value="@DarkTheme.css" />
-        <URL value="@Extensions.css" />
+        <URL value="@ExtensionsDark.css" />
       </stylesheets>
+
+        <HBox>
 
       <VBox>
         <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
@@ -32,6 +39,11 @@
             <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help" />
           </Menu>
         </MenuBar>
+<!--        <TabPane GridPane.rowIndex="0" GridPane.columnIndex="1" >-->
+<!--          <Tab text="text">-->
+<!--          </Tab>-->
+<!--        </TabPane>-->
+
 
         <StackPane VBox.vgrow="NEVER" fx:id="resultDisplayPlaceholder" styleClass="pane-with-border"
                    minHeight="100" prefHeight="100" maxHeight="100">
@@ -55,6 +67,17 @@
 
         <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
       </VBox>
+            <VBox>
+                <VBox fx:id="wishesPlaceHolder" prefHeight="200" minWidth="140">
+                    <Label fx:id="wishlistTitle" text="Wishlist" styleClass="cell_big_label"/>
+                  <Label text="subtext" styleClass="cell_small_label"/>
+                </VBox>
+                <VBox fx:id="budgetsPlaceHolder" prefHeight="200" minWidth="140">
+                    <Label fx:id="budgetTitle" text="Budgets" styleClass="cell_big_label"/>
+                  <Label text="subtext" styleClass="cell_small_label"/>
+                </VBox>
+            </VBox>
+        </HBox>
     </Scene>
   </scene>
 </fx:root>
