--- a/src/main/resources/view/DiaryPage.fxml
+++ b/src/main/resources/view/DiaryPage.fxml
@@ -14,13 +14,13 @@
         </Menu>
     </MenuBar>
 
-    <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border" VBox.vgrow="NEVER">
+    <StackPane fx:id="commandBoxPlaceholder" prefHeight="111.0" prefWidth="131.0" styleClass="pane-with-border" VBox.vgrow="NEVER">
         <padding>
             <Insets bottom="5" left="10" right="10" top="5" />
         </padding>
     </StackPane>
 
-    <StackPane fx:id="resultDisplayPlaceholder" alignment="BOTTOM_LEFT" maxHeight="300.0" minHeight="26.0" prefHeight="100.0" prefWidth="131.0" styleClass="pane-with-border" VBox.vgrow="NEVER">
+    <StackPane fx:id="resultDisplayPlaceholder" alignment="BOTTOM_LEFT" maxHeight="300.0" minHeight="26.0" prefHeight="100.0" prefWidth="54.0" styleClass="pane-with-border" VBox.vgrow="NEVER">
         <padding>
             <Insets bottom="5" left="10" right="10" top="5" />
         </padding>
