--- a/src/main/resources/view/EmployeeListCard.fxml
+++ b/src/main/resources/view/EmployeeListCard.fxml
@@ -28,9 +28,9 @@
         <Label fx:id="employeeName" text="\$first" styleClass="cell_big_label" />
       </HBox>
       <FlowPane fx:id="tags" />
-      <Label fx:id="employeePhone" styleClass="cell_small_label" text="\$employeePhone" />
-      <Label fx:id="employeeAddress" styleClass="cell_small_label" text="\$employeeAddress" />
-      <Label fx:id="employeeEmail" styleClass="cell_small_label" text="\$employeeEmail" />
+      <Label fx:id="employeeID" styleClass="cell_small_label" text="\$employeeID" />
+      <Label fx:id="employeeGender" styleClass="cell_small_label" text="\$employeeGender" />
+      <Label fx:id="employeePosition" styleClass="cell_small_label" text="\$employeePosition" />
     </VBox>
   </GridPane>
 </HBox>
