Modify offline tab layout. - now paragraph text does not overrun on note column - issue: need to allow paragraph width to grow? or let note column width to grow?

--- a/src/main/resources/view/AnnotationParagraphCard.fxml
+++ b/src/main/resources/view/AnnotationParagraphCard.fxml
@@ -19,7 +19,7 @@
         </VBox>
         <HBox spacing="5" alignment="CENTER_LEFT" HBox.hgrow="ALWAYS"
             maxWidth="500" minWidth="400" prefWidth="500">
-            <Label fx:id="para" styleClass="cell_big_label" wrapText="true" textOverrun="CLIP">
+            <Label fx:id="para" styleClass="cell_big_label" wrapText="true" textOverrun="CLIP" prefWidth="400">
                 <minWidth>
                     <!-- Ensures that the label text is never truncated -->
                     <Region fx:constant="USE_PREF_SIZE" />
