--- a/src/main/resources/view/ElisaDialogBox.fxml
+++ b/src/main/resources/view/ElisaDialogBox.fxml
@@ -3,12 +3,13 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
 <fx:root alignment="TOP_LEFT" fillHeight="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefWidth="280" type="HBox" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <javafx.scene.layout.HBox alignment="TOP_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" style="-fx-background-color: rgba(29,146,255,0.85); -fx-background-radius: 20,20,20,20;">
             <children>
-                <Label fx:id="dialog" maxHeight="1.7976931348623157E308" text="Label" wrapText="true">
+                <Label fx:id="dialog" maxHeight="1.7976931348623157E308" text="Label" textFill="WHITE" wrapText="true">
                     <HBox.margin>
                         <Insets left="10.0" right="10.0" />
                     </HBox.margin>
