--- a/src/main/resources/view/Overview.fxml
+++ b/src/main/resources/view/Overview.fxml
@@ -107,12 +107,12 @@
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                            </VBox.margin>
                         </Label>
-                        <BarChart>
+                        <BarChart fx:id="salesBarChart">
                           <xAxis>
-                            <CategoryAxis side="BOTTOM" />
+                            <CategoryAxis fx:id="salesXAxis" side="BOTTOM" />
                           </xAxis>
                           <yAxis>
-                            <NumberAxis side="LEFT" />
+                            <NumberAxis fx:id="salesYAxis" side="LEFT" />
                           </yAxis>
                            <VBox.margin>
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -135,7 +135,7 @@
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                            </VBox.margin>
                         </Label>
-                        <LineChart>
+                        <LineChart fx:id="budgetBarChart">
                           <xAxis>
                             <CategoryAxis side="BOTTOM" />
                           </xAxis>
