Changes : - Back DiaryEntryList with SortedList to provide correct ordering of entries - Add inline diaryEntry photo display implementation - Remove photo image validation, add invalid placeholder image - Much more styling - Add tests for Photo, AddPhotoParser and DeletePhotoParser - Add create day button on diary day navigation button - Switch DiaryEntry (UI) updating model to use JavaFX TextArea's - Add missing javadocs, fix style deviations

--- a/src/main/resources/view/diary/DiaryEditBox.fxml
+++ b/src/main/resources/view/diary/DiaryEditBox.fxml
@@ -6,7 +6,7 @@
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextArea fx:id="textEditor" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" onKeyTyped="#handleTextChange" promptText="Edit your diary text here!" style="-fx-background-color: #EFD6AC;" wrapText="true" VBox.vgrow="ALWAYS">
+      <TextArea fx:id="textEditor" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" onKeyTyped="#handleTextChange" promptText="Edit your diary text here!" stylesheets="@diaryTextArea.css" wrapText="true" VBox.vgrow="ALWAYS">
          <font>
             <Font name="Arial" size="14.0" />
          </font>
