--- a/src/main/resources/view/diary/DiaryTextFlow.fxml
+++ b/src/main/resources/view/diary/DiaryTextFlow.fxml
@@ -3,8 +3,8 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #121420;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ListView fx:id="diaryTextLinesList" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #FFFFFA;" VBox.vgrow="ALWAYS" />
+      <ListView fx:id="diaryTextLinesList" style="-fx-background-color: transparent;" stylesheets="@diaryEntryListView.css" VBox.vgrow="ALWAYS" />
    </children>
 </VBox>
