--- a/src/main/resources/view/diary/DiaryGallery.fxml
+++ b/src/main/resources/view/diary/DiaryGallery.fxml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #040F0F; -fx-border-color: #020A0A; -fx-border-image-width: 2;" vbarPolicy="NEVER" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <ListView fx:id="photosPlaceholder" VBox.vgrow="ALWAYS" />
-</ScrollPane>
+<VBox style="-fx-background-color: #040F0F; -fx-border-color: #020A0A; -fx-border-image-width: 2;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <ListView fx:id="photosPlaceholder" stylesheets="@diaryGalleryListView.css" VBox.vgrow="ALWAYS" />
+   </children>
+</VBox>
