--- a/src/main/resources/view/CardListPanel.fxml
+++ b/src/main/resources/view/CardListPanel.fxml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.VBox?>
 
 
-<ScrollPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <content>
-      <VBox>
-        <ListView fx:id="cardListView" VBox.vgrow="ALWAYS" />
-      </VBox>
-   </content>
-</ScrollPane>
+<VBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+  <ListView fx:id="cardListView" VBox.vgrow="ALWAYS" />
+</VBox>
