--- a/src/main/resources/view/EmployeeListCard.fxml
+++ b/src/main/resources/view/EmployeeListCard.fxml
@@ -25,12 +25,12 @@
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
-        <Label fx:id="employeeName" text="\$first" styleClass="cell_big_label" />
+        <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
       </HBox>
       <FlowPane fx:id="tags" />
-      <Label fx:id="employeeID" styleClass="cell_small_label" text="\$employeeID" />
-      <Label fx:id="employeeGender" styleClass="cell_small_label" text="\$employeeGender" />
-      <Label fx:id="employeePosition" styleClass="cell_small_label" text="\$employeePosition" />
+      <Label fx:id="email" styleClass="cell_small_label" text="\$employeeID" />
+      <Label fx:id="phone" styleClass="cell_small_label" text="\$employeeGender" />
+      <Label fx:id="address" styleClass="cell_small_label" text="\$employeePosition" />
     </VBox>
   </GridPane>
 </HBox>
