Add updating of prerequisites with models

--- a/src/main/resources/view/ModuleListCard.fxml
+++ b/src/main/resources/view/ModuleListCard.fxml
@@ -23,6 +23,7 @@
       <HBox spacing="5" alignment="CENTER_LEFT">
         <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
         <Label fx:id="mcCount" styleClass="cell_small_label" wrapText="true" text="\$McCount" />
+        <Label fx:id="prereqs" styleClass="cell_small_label" wrapText="true" text="\$Prereqs" />
       </HBox>
       <FlowPane fx:id="tags" />
     </VBox>
