--- a/src/main/resources/view/LightTheme.css
+++ b/src/main/resources/view/LightTheme.css
@@ -356,3 +356,13 @@
     -fx-background-radius: 2;
     -fx-font-size: 11;
 }
+
+#prereqs {
+    -fx-text-fill: white;
+    -fx-background-color: #cd0000;
+    -fx-padding: 2 4 2 4;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
+    -fx-font-size: 12;
+    -fx-font-weight: bold;
+}
