Revert refactoring errors

--- a/docs/templates/_header.html.slim
+++ b/docs/templates/_header.html.slim
@@ -19,7 +19,7 @@
   #site-header
     nav.navbar.navbar-light.bg-light
       .container
-        - if attr? 'site-employeeName'
+        - if attr? 'site-name'
             a.navbar-brand href=(site_url 'index.html') =(attr 'AddMin+')
         ul.navbar-nav
           li.nav-item
@@ -47,15 +47,15 @@
         - if attr? :author
           span.author#author =(attr :author)
           br
-          - if attr? :employeeEmail
-            span.employeeEmail#employeeEmail =sub_macros(attr :employeeEmail)
+          - if attr? :email
+            span.email#email =sub_macros(attr :email)
             br
           - if (authorcount = (attr :authorcount).to_i) > 1
             - (2..authorcount).each do |idx|
               span.author id="author#{idx}" =(attr "author_#{idx}")
               br
               - if attr? "email_#{idx}"
-                span.employeeEmail id="employeeEmail#{idx}" =sub_macros(attr "email_#{idx}")
+                span.email id="email#{idx}" =sub_macros(attr "email_#{idx}")
         - if attr? :revnumber
           span#revnumber #{((attr 'version-label') || '').downcase} #{attr :revnumber}#{',' if attr? :revdate}
           '
