Updated UG: Replaced addressbook references to timebook, Updated show and export command usages, Changed flags from / to -

--- a/src/main/resources/view/PersonDetailsView.fxml
+++ b/src/main/resources/view/PersonDetailsView.fxml
@@ -7,10 +7,10 @@
 <?import javafx.scene.layout.*?>
 
 <StackPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-    <StackPane fx:id="personDetailContainer" id="groupDetailContainer">
-        <VBox fx:id="personDetailsView" id="groupDetailsView">
+    <StackPane fx:id="personDetailContainer" id="personDetailContainer">
+        <VBox fx:id="personDetailsView" id="personDetailsView">
             <StackPane fx:id="personDetailCard"></StackPane>
-            <StackPane fx:id="personSchedule"></StackPane>
+            <StackPane fx:id="personSchedule" prefWidth="1800"></StackPane>
         </VBox>
     </StackPane>
 </StackPane>
