--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -332,7 +332,7 @@
 }
 
 .scroll-bar:vertical .increment-arrow, .scroll-bar:vertical .decrement-arrow {
-    -fx-padding: 1 8 1 8;
+    -fx-padding: 1 5 1 5;
 }
 
 .scroll-bar:horizontal .increment-arrow, .scroll-bar:horizontal .decrement-arrow {
@@ -342,6 +342,10 @@
 #cardPane {
     -fx-background-color: transparent;
     -fx-border-width: 0;
+}
+
+#colouredTimeslot {
+    -fx-effect: dropshadow(gaussian, black, 2, 0.0, 3, 3);
 }
 
 #commandTypeLabel {
@@ -385,6 +389,10 @@
     -fx-border-radius: 2;
     -fx-background-radius: 2;
     -fx-font-size: 11;
+}
+
+#scheduleContents:hover {
+    -fx-vbar-policy: as_needed;
 }
 
 #suggestions-list {
