--- a/src/main/resources/view/GroupDetailsView.fxml
+++ b/src/main/resources/view/GroupDetailsView.fxml
@@ -8,7 +8,6 @@
 
 <StackPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <StackPane fx:id="groupDetailContainer" id="groupDetailContainer">
-        <VBox fx:id="groupDetailsView" id="groupDetailsView">
             <GridPane>
                 <columnConstraints>
                     <ColumnConstraints percentWidth="30"/>
@@ -16,8 +15,8 @@
                 </columnConstraints>
                 <StackPane fx:id="groupDetailCard" GridPane.columnIndex="0" GridPane.rowIndex="0"></StackPane>
                 <StackPane fx:id="groupMembersList" GridPane.columnIndex="1" GridPane.rowIndex="0"></StackPane>
+                <StackPane fx:id="groupSchedule" GridPane.columnIndex="0"
+                           GridPane.rowIndex="1" GridPane.columnSpan="2"></StackPane>
             </GridPane>
-            <StackPane fx:id="groupSchedule"></StackPane>
-        </VBox>
     </StackPane>
 </StackPane>
