--- a/src/main/resources/view/ScheduleView.fxml
+++ b/src/main/resources/view/ScheduleView.fxml
@@ -8,7 +8,7 @@
 <HBox>
     <VBox fx:id="scheduleContainer" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
           HBox.hgrow="ALWAYS">
-        <ScrollPane fx:id="scheduleHeaderWrapper"/>
-        <ScrollPane fx:id="scheduleContents" id="scheduleContents"/>
+        <ScrollPane fx:id="scheduleHeaderWrapper" fitToWidth="true"/>
+        <ScrollPane fx:id="scheduleContents" id="scheduleContents" fitToWidth="true"/>
     </VBox>
 </HBox>
