--- a/src/main/resources/view/TutorialListCard.fxml
+++ b/src/main/resources/view/TutorialListCard.fxml
@@ -26,9 +26,9 @@
         </Label>
         <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
       </HBox>
-      <Label fx:id="module" styleClass="cell_small_label" text="\$module" />
       <Label fx:id="day" styleClass="cell_small_label" text="\$day" />
       <Label fx:id="weeks" styleClass="cell_small_label" text="\$weeks" />
+      <Label fx:id="module" styleClass="module_label" text="\$module" />
     </VBox>
   </GridPane>
 </HBox>
