Change fill colour for command word syntax hightlighting

--- a/src/main/resources/view/syntax-highlighting.css
+++ b/src/main/resources/view/syntax-highlighting.css
@@ -1,5 +1,5 @@
 .command-word {
-    -fx-fill: brick;
+    -fx-fill: #00ffe9;
     -fx-font-weight: bold;
     -rtfx-background-color: rgba(172, 78, 71, 0.48);
 
